--- a/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/ListadoAsignaciones.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/ListadoAsignaciones.cshtml
@@ -374,7 +374,7 @@
                                             <th width="1%">#</th>
                                             <th>Software</th>
                                             <th>
-                                                Versi&oacute;n
+                                                Usuario
                                             </th>
                                             <th>
                                                 Asign&oacute;
@@ -390,14 +390,7 @@
                                                     @Html.DisplayFor(model => sw.IT_inventory_software.descripcion)
                                                 </th>
                                                 <td>
-                                                    @if (sw.id_inventory_software_version.HasValue)
-                                                    {
-                                                        <span>@sw.IT_inventory_software_versions.version</span>
-                                                    }
-                                                    else
-                                                    {
-                                                        <span>N/A</span>
-                                                    }
+                                                    @Html.DisplayFor(model => sw.usuario)
 
                                                 </td>
                                                 <td>
@@ -553,7 +546,6 @@
         });
 
         function showDialogDeshabilitarLinea(texto="", id, id_empleado) {
-
            
             Swal.fire({
                 title: 'Confirmación',
