--- a/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/CargarResponsiva.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/CargarResponsiva.cshtml
@@ -138,6 +138,12 @@
                                     <input type="text" class="form-control" value="@Html.DisplayFor(model => model.empleados.ConcatNombre)" readonly />
                                 </div>
                             </div>
+                            <div class="item form-group">
+                                @Html.LabelFor(model => model.id_responsable_principal, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                <div class="col-md-6 col-sm-6 ">
+                                    <input type="text" class="form-control" value="@Html.DisplayFor(model => model.empleados1.ConcatNombre)" readonly />
+                                </div>
+                            </div>
 
                             if (Model.id_cellular_line.HasValue)
                             {
