--- a/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/DesasociarEquipo.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/DesasociarEquipo.cshtml
@@ -124,15 +124,21 @@
 
                             </div>
                             <div class="item form-group">
-                                @Html.LabelFor(model => model.id_sistemas, new { @class = "col-form-label col-md-2 col-sm-2 label-align" })
+                                @Html.LabelFor(model => model.id_sistemas, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                                 <div class="col-md-6 col-sm-6 ">
                                     <input type="text" class="form-control" value="@Html.DisplayFor(model => model.empleados2.ConcatNombre)" readonly />
                                 </div>
                             </div>
                             <div class="item form-group">
-                                @Html.LabelFor(model => model.id_empleado, new { @class = "col-form-label col-md-2 col-sm-2 label-align" })
+                                @Html.LabelFor(model => model.id_empleado, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                                 <div class="col-md-6 col-sm-6 ">
                                     <input type="text" class="form-control" value="@Html.DisplayFor(model => model.empleados.ConcatNombre)" readonly />
+                                </div>
+                            </div>
+                            <div class="item form-group">
+                                @Html.LabelFor(model => model.id_responsable_principal, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                <div class="col-md-6 col-sm-6 ">
+                                    <input type="text" class="form-control" value="@Html.DisplayFor(model => model.empleados1.ConcatNombre)" readonly />
                                 </div>
                             </div>
 
@@ -180,7 +186,6 @@
                                 <span style="color:black"><b>RESPONSIVA</b></span>
                             </div>
 
-
                             if (Model != null && Model.id_biblioteca_digital > 0)
                             {
                                 <div class="form-group row" id="div_document_support_info">
@@ -208,8 +213,6 @@
                                     </div>
                                 </div>
                             }
-
-
 
                             <div class="ln_solid"></div><div class="form-group row">
                                 <span style="color:black"><b>FECHA DE DESASOCIACI&Oacute;N</b></span>
