--- a/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/Details.cshtml
@@ -125,7 +125,18 @@
                             <div class="col-md-6 col-sm-6 ">
                                 <input type="text" class="form-control" value="@Html.DisplayFor(model => model.empleados2.ConcatNombre)" readonly />
                             </div>
-
+                        </div>
+                        <div class="item form-group">
+                            @Html.LabelFor(model => model.id_empleado, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                            <div class="col-md-6 col-sm-6 ">
+                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.empleados.ConcatNombre)" readonly />
+                            </div>
+                        </div>                      
+                        <div class="item form-group">
+                            @Html.LabelFor(model => model.id_responsable_principal, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                            <div class="col-md-6 col-sm-6 ">
+                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.empleados1.ConcatNombre)" readonly />
+                            </div>
                         </div>
 
 
@@ -146,7 +157,7 @@
 
                         @foreach (var item in Model.IT_asignacion_hardware_rel_items)
                         {
-                            var generic = item.GetGenericObject();                           
+                            var generic = item.GetGenericObject();
 
                             <div class="item form-group">
                                 <label class="col-form-label col-md-1 col-sm-1 label-align">Origen</label>
