--- a/CódigoFuente/BitacorasProduccion/Views/IT_inventory_software/Edit.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_inventory_software/Edit.cshtml
@@ -50,61 +50,18 @@
                                 <span style="color:black"><b>GENERAL INFORMATION</b></span>
                             </div>
                             <div class="item form-group">
-
-                                @Html.LabelFor(model => model.descripcion, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
-                                <div class="col-md-3 col-sm-3 ">
+                                @Html.LabelFor(model => model.descripcion, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                <div class="col-md-5 col-sm-5 ">
                                     @Html.EditorFor(model => model.descripcion, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
                                     @Html.ValidationMessageFor(model => model.descripcion, "", new { @class = "text-danger" })
                                 </div>
-                                @Html.LabelFor(model => model.activo, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+
+                            </div>
+                            <div class="item form-group">
+                                @Html.LabelFor(model => model.activo, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                                 <div class="col-md-3 col-sm-3 ">
                                     @Html.EditorFor(model => model.activo, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
                                     @Html.ValidationMessageFor(model => model.activo, "", new { @class = "text-danger" })
-                                </div>
-
-                            </div>
-
-                            <div class="ln_solid"></div>
-                            <div class="form-group row">
-                                <span style="color:black"><b>VERSIONS</b></span>
-                            </div>
-                            <div id="div_versions">
-
-                                @foreach (Portal_2_0.Models.IT_inventory_software_versions item in Model.IT_inventory_software_versions)
-                                {
-
-                                    <div class="form-group row" id="div_versions_@contador">
-                                        <input type="hidden" id="IT_inventory_software_versions[@contador].id" name="IT_inventory_software_versions[@contador].id" value="@item.id" />
-                                        <label class="control-label col-md-1" for="IT_inventory_software_versions[@contador].version">
-                                            <span class="float-right">Version:</span>
-                                        </label>
-                                        <div class="col-md-5">
-                                            <input type="text" style="text-transform: uppercase; " onkeyup="javascript:this.value=this.value.toUpperCase();" maxlength="50" name="IT_inventory_software_versions[@contador].version" id="IT_inventory_software_versions[@contador].version" class="form-control col-md-12" value="@item.version" autocomplete="off" required>
-                                            <span class="field-validation-valid text-danger" data-valmsg-for="IT_inventory_software_versions[@contador].version" data-valmsg-replace="true"></span>
-                                        </div>
-                                        <label class="control-label col-md-1" for="IT_inventory_software_versions[@contador].activo">
-                                            <span class="float-right">Active?:</span>
-                                        </label>
-                                        <div class="col-md-1">
-                                            <input type="checkbox" class="form-control" id="IT_inventory_software_versions[@contador].activo" name="IT_inventory_software_versions[@contador].activo" value="true" @(item.activo ? "checked" : String.Empty)>
-                                        </div>
-                                        @*<div class="col-md-1">
-                            <input type="button" value="delete" class="btn btn-danger" onclick="borrarPieza(@contador); return false;">
-                        </div>*@
-                                    </div>
-
-                                    contador++;
-                                }
-                            </div>
-
-                            <div class="form-group row">
-
-                            </div>
-                            <div class="form-group row">
-                                <div class="col-md-10">
-                                </div>
-                                <div class="col-md-2">
-                                    <input type="button" value="Add" class="btn btn-round btn-warning float-right" onclick="AgregarConcepto(); return false;" style="width:100%">
                                 </div>
                             </div>
 
@@ -150,63 +107,9 @@
 
         });
 
-        //variable global para el id
-        var num = 0;
-        //variable global de los select
-        //var textoSelectFalla = obtieneSelectFalla();
-
-        //agreaga una fila para lotes
-        function AgregarConcepto() {
-            //obtine los valores de lotes
-
-
-            $("#div_versions").append(
-            `
-                <div class="form-group row" id="div_versions_`+ num + `">
-                    <label class="control-label col-md-1" for="IT_inventory_software_versions[`+ num + `].version">
-                        <span class="float-right">Version:</span>
-                    </label>
-                    <div class="col-md-5">
-                        <input type="text" style="text-transform: uppercase; " onkeyup="javascript:this.value=this.value.toUpperCase();" maxlength="50" name="IT_inventory_software_versions[`+ num + `].version" id="IT_inventory_software_versions[`+ num + `].version" class="form-control col-md-12" value="" autocomplete="off" required>
-                        <span class="field-validation-valid text-danger" data-valmsg-for="IT_inventory_software_versions[`+ num + `].version" data-valmsg-replace="true"></span>
-                    </div>
-                    <label class="control-label col-md-1" for="IT_inventory_software_versions[`+ num + `].activo">
-                        <span class="float-right">Active?:</span>
-                    </label>
-                    <div class="col-md-1">
-                        <input type="checkbox" class="form-control" id="IT_inventory_software_versions[`+ num + `].activo" name="IT_inventory_software_versions[`+ num + `].activo" value="true" checked>
-                    </div>
-                    <div class="col-md-1">
-                        <input type="button" value="Delete" class="btn btn-danger" onclick="borrarPieza(`+ num + `); return false;">
-                    </div>
-                </div>
-            `
-            );
-            $("#div_versions_" + num).hide().fadeIn(500);
-
-            //aplica estilo a los nuevos checks
-            $('input').iCheck({
-                checkboxClass: 'icheckbox_square-green',
-                radioClass: 'iradio_square-green',
-                increaseArea: '20%' // optional
-            });
-
-
-            //aumenta el contador
-            num++;
-        }
-
-        //borra un lote
-        function borrarPieza(id) {
-
-            $("#div_versions_" + id).fadeOut(0, function () {
-                $(this).remove();
-            });
-
-        }
-
+        
         window.onload = function () {
-            clicMenu(1);
+            clicMenu(2);
         }
     </script>
 }
